[tool.poetry]
name = "csv2http"
version = "0.0.1a"
description = "Make http requests based on a CSV input file"
authors = ["Gabriel Gore <gabriel59kg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
respx = "^0.19.2"
black = "^22.3.0"
isort = "^5.10.1"
invoke = "^1.7.1"
mypy = "^0.960"
pylint = "^2.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
