[tool.poetry]
name = "csv2http"
version = "0.0.1a"
description = "Make http requests based on a CSV input file"
authors = ["Gabriel Gore <gabriel59kg@gmail.com>"]
license = "MIT License"
readme = "README.md"
repository = "https://github.com/kilo59/csv2http"
homepage = "https://github.com/kilo59/csv2http"
keywords = ["http", "csv", "cli"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
respx = "^0.19.2"
black = "^22.3.0"
isort = "^5.10.1"
invoke = "^1.7.1"
mypy = "^0.960"
pylint = "^2.14.0"
pytest = "^7"
pytest-icdiff = "^0.5"
pytest-asyncio = "^0.18.3"
pytest-sugar = "^0.9.4"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.isort]
known_first_party = "csv2http"
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
